2008-09-29  Jonathan Gonzalez V.  <zeus@gnu.org>

	* ventas.c (ventas_win): Added check if CAJA option was set to
	zero we will not show the close cash box button and will not ask
	to close it.

2008-09-24  Jonathan Gonzalez V.  <zeus@gnu.org>

	* rizoma_informes.c (fill_totals): Added new row to show the
	discounts.

2008-09-17  Jonathan Gonzalez V.  <zeus@gnu.org>

	* rizoma_informes.c (reports_win): Added function to missing print
	buttons.

2008-09-16  Jonathan Gonzalez V.  <zeus@gnu.org>

	* postgres-functions.c (GetTotalCashSell, GetTotalSell)
	(GetTotalCreditSell): Fixed to not include nullify sells.

2008-09-14  Jonathan Gonzalez V.  <zeus@gnu.org>

	* encriptar.c: Clean up of commented code.

2008-09-10  Jonathan Gonzalez V.  <zeus@gnu.org>

	* rizoma_inventario.c (main): Added some checks related to what
	parms are passed using the command line.
	(main): Set to "Inventario" all the info of the first big buy.

2008-09-02  Jonathan Gonzalez V.  <zeus@gnu.org>

	* postgres-functions.c (FiFo): Fixed bug. Replaced %d for a proper %s.

2008-09-01  Jonathan Gonzalez V.  <zeus@lunareja>

	* credito.c (search_client): Fixed bug reported by Victor.

2008-08-19  Jonathan Gonzalez V.  <zeus@gnu.org>

	* postgres-functions.c (SearchTuplesByDate): Added a condition to
	avoid null sales.

2008-08-18  Jonathan Gonzalez V.  <zeus@gnu.org>

	* postgres-functions.c (FiFo): Changed to use the plpgsql function
	calculate_fifo.

2008-08-13  Jonathan Gonzalez V.  <zeus@gnu.org>

	* compras.c (on_btn_add_new_product_clicked): Added the proper
	check looking for repeated short code and barcode.

2008-08-07  Jonathan Gonzalez V.  <zeus@gnu.org>

	* rizoma-config.c (create_config): Changed the default profile
	from DEFAULT to RIZOMA.

	* ventas.c (nullify_sale_win): Set to selection none the tree view
	with the details of a sale.

	* rizoma_informes.c (reports_win): Removed the max width to
	columns on tree_view_sell_rank tree view.